# burn-pinn-tf

./: Cargo.toml  LICENSE  README.md  package-lock.json
src/: constants.rs  infer.rs  lib.rs  main.rs  model.rs  physics.rs  train.rs  train.rs.bak
tests/: integration_test.rs  physics_test.rs
